# ronitnath

./: .ci-red-proof  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.yml  flake.nix  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.sqlx/: query-01337a5e14c32baaafe0a2e254eb2c78417e79faec3cc30a9967ae15859c4a2a.json  query-02a089d9e3460ad55144993ca2dcd0e4915a9f1c59fbab39a5edd086051208b9.json  query-06fa9c9e5bb4b5091cc955ac43075568177aef9eff0287f94d284cfcad28f9d0.json  query-07ddc126da3734bd4efb7d3ad3ef156184374b4717c71dc4c7e512c6edfea84c.json  query-0ca8b861136d62b60dfd00d1645e22743b2765c43addec5f2dd83d89669f0c84.json  query-0e953566580e5b95c8f719af78c260d70bdf4a04082f4bea23cd60a205378d6d.json  query-1023bad1095bfc8526329126db3e0aa2fd53687f17f8b86fccb4920797827ba1.json  query-116a60f757d543f60cf5aa05a91a4afdb1abc7ead7318be6a07c279f035ae138.json  query-1193a5e9367f8cfe10de5cf8fb100ffc6fa341a1ce159831204d576be56ea745.json  query-11a2247c0d7fc6525eeef124d7904d167f7881a60068c201647e229b390c6c6a.json  query-1605e232b8f04a064dd1745bf50d19ec18b9872f6afe774c3e0c5ffae7a15099.json  query-1b52cbbfa1cb0024c3b55a2c3bac3b5a04668ba0ffa51223f4b7cec09571626a.json  query-1c21985e95bac71cae458d924b9d1d8796e755cd4e68b42d96c2ae6e39f252d6.json  query-1e1382244876f606f6c65cc2c8443e440099bf1e6424e5e3ae47be9154d15cdb.json  query-20f7dbe3bbfbe5d3ce9771aaa9a781182871336cc0f0910d6702bc447d371fe1.json  query-22657957d38d540bd71d2e0e7c55c3231ff56c19c71969961f13bf4bb257b622.json  query-24cd7e1ca47fdce2b98b2d73357209b3aa5635cd1c9b7e128a655ede04bc57fc.json  query-274b80a48af29a4db627325b10d0a1687036449f44b827a75d0b76a54d3e6832.json  query-28cb52e257f85c0e433773847051d066d2f0f975b9048326c7cfb8b04713f411.json  query-2abc0753fc0ab416c9c14c00e059bffacbdb7dd5e5b0d5ee25712b8d0f3da61f.json  query-2c5b9f90960bdc1ae9945976777d7fff24d0bb9c117730372cdc379681224e48.json  query-2d2f8b8af97938a4109b048fef3535c7d4a09692c892d3f58cf018e5ebcf5622.json  query-33e9c72b3e842047fba2492dd07015088b7939ad9bd27f12e9ab1379c2c7427f.json  query-3409938466d01f273b9b3434853bb0439a5bed171373a4115329b1fce67f3b82.json  query-351715b07666d8cefd77d57bdae73606d059f3579895101c6640f2793078969d.json  query-35331abd91f91f63d604a3566c42547d215dd131de344f3e34348cbd737dafe5.json  query-36d708f5096ace7afbb7a668ae4e4e8981275fab1d55466ad0438ab08d9c4f8e.json  query-38e7a07ab659b5edc09d24464bb882974eda99b8dde5de915781d5b866a74fe9.json  query-3b5b527a65948419fc75d2bbc0b881a7bf2d80a1d788b3e9591a779c8fbe189f.json  query-3bde7db1f47cfb4b195283a22e40d7650104a7545ac1b31dc5d6765d27205f0e.json  query-3c03d149514aacb3109ed79dd97e5b66e76c0e285aba3106b13e3c40772865bf.json  query-3ee2c07197ba16457c75ad5221b9811721d33e2db8033ea9e8d35a8fb83043b1.json  query-435872989bb311d18e930081af883729eefb7224df14582d0b82147c416d0274.json  query-4544dad3e58cef18f7773e810952c216bc4e542292bb784e9c125ed0f072f049.json  query-455bb1b891cc82aa766e7e129699cbe161d614792fbc86bbd380c6685a1b3fa2.json  query-4593b625d82eeb3f0480d540240be18eeb522e1b4e89547bb0961a0fb723429d.json  query-48170d1996e5a2da55cce919b8bd58810b9ed20ae8be05ba8ec2c9804fc28728.json  query-49b3072b17c97b97b17887615c8566a5c4658bf6606303bb529f68f795c10d53.json  query-49f26b48633912006b4e30232f42daee1fb22eaf6765b6d1244a494ce0f97356.json  query-4d21ec40e9bc1b474ff16e5edf6089c1abaaacc8d56720f23e1827eb0e5ea1c3.json  (+103 more)
deploy/: app.toml  compose.yaml  compose.yml  deploy.sh  ronitnath-admin.service  ronitnath-admin.socket  ronitnath-backup.service  ronitnath-backup.sh  ronitnath-backup.timer  ronitnath-restore-drill.service  ronitnath-restore-drill.timer  ronitnath-site.service  ronitnath-site.socket  secrets.toml
docker/: ronitnath.Dockerfile
docs/: README.md  deploy.md  deployment.md  design.md  development.md  oidc-factor.md  tracing.md
migrations/: 0001_guestbook.up.sql  0002_seed_guestbook.down.sql  0002_seed_guestbook.up.sql  0003_identities.up.sql  0004_accounts.up.sql  0005_memberships.up.sql  0006_factors.down.sql  0006_factors.up.sql  0007_sessions.up.sql  0008_pending_auth.down.sql  0008_pending_auth.up.sql  0009_audit_log.up.sql  0010_guestbook_account_scope.down.sql  0010_guestbook_account_scope.up.sql  0011_people.up.sql  0012_events.up.sql  0013_event_links.down.sql  0013_event_links.up.sql  0014_schedule_items.down.sql  0014_schedule_items.up.sql  0015_attendance.up.sql  0016_segment_rsvps.down.sql  0016_segment_rsvps.up.sql  0017_people_nickname.down.sql  0017_people_nickname.up.sql  0018_event_headcount.down.sql  0018_event_headcount.up.sql  0019_event_invite_content.down.sql  0019_event_invite_content.up.sql  0020_segment_paid_attended.down.sql  0020_segment_paid_attended.up.sql  0021_schedule_items_drop_capacity.down.sql  0021_schedule_items_drop_capacity.up.sql  0022_circles.down.sql  0022_circles.up.sql  0023_circle_members.down.sql  0023_circle_members.up.sql  0024_audience_policies.down.sql  0024_audience_policies.up.sql  0025_audience_circle_grants.down.sql  (+20 more)
src/: app.rs  assets.rs  auth.rs  config.rs  dates.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs  photos.rs  rate_limit.rs  render.rs  routes.rs  security_headers.rs  seed.rs  (+4 more)
(+213 files in other folders)
